# racecar_benchmark

racecar_navigation/: CMakeLists.txt  package.xml  start_gatto.sh~
racecar_navigation/config/dwa_config/: costmap_common.yaml  costmap_local.yaml  planner.yaml
racecar_navigation/config/prohibition_config/: prato.yaml
racecar_navigation/config/sbpl_config/: base_local_planner_params_close.yaml  costmap_common_params.yaml
racecar_navigation/config/sbpl_config/mprim/: test_nuc.mprim
racecar_navigation/config/teb_config/: costmap_common.yaml  costmap_global_static.yaml  costmap_local.yaml  planner.yaml
racecar_navigation/data/: LEFT.csv  RIGHT.csv  dwa_v3.npy  goal.csv  mpnet_v3.npy  start.csv
racecar_navigation/decaying_obstacle_layer/test/: clock.launch
racecar_navigation/launch/: amcl_diff.launch  dwa_navigation.launch  dwa_navigation_v20190731.launch  dwa_navigation_v20190925.launch  sbpl_navigation.launch  teb_navigation.launch  teleKeyboard_nav.launch
racecar_navigation/launch/dwa_planner/: dwa_move_base.launch
racecar_navigation/launch/sbpl_planner/: sbpl_move_base.xml
racecar_navigation/launch/teb_planner/: teb_move_base.launch
racecar_navigation/scripts/: init_pose.py  merge_data.py  nav_yolo_Final_Fei.py  setinitpose_goal.py  setinitpose_goal_auto.py  test_controller.py
racecar_simulator/: params.yaml
racecar_simulator/launch/: dwa_plan.rviz  map_robot.rviz  simulate.launch  teb_plan.rviz
racecar_simulator/maps/: grid_world_1.pgm  grid_world_1.yaml  grid_world_2.yaml
racecar_simulator/node/: simulate.cpp
(+3 files in other folders)
