<?xml version="1.0"?>
<package format="2">
  <name>nuc_navigation</name>
  <version>0.0.0</version>
  <description>The nuc_navigation package</description>

  <author email="lnnx2006@gmail.com">Fei Liu</author>
  <maintainer email="lnnx2006@gmail.com">Fei Liu</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
